# Faszienbehandlung.jetzt-Rust-Version

./: .env.example  .env.release  .gitignore  .mcp.json  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy-self-hosted-linux.yml  deploy-self-hosted.yml
data/: .gitkeep
deploy/systemd/: faszienbehandlung_jetzt.service.example
migrations/: 0001_initial.sql
scripts/: deploy-release.ps1  deploy-release.sh  dev-watch.ps1  dev-watch.sh
src/: auth.rs  config.rs  content.rs  db.rs  error.rs  forms.rs  lib.rs  main.rs  models.rs  seed.rs  seo.rs  state.rs  utils.rs  views.rs
src/handlers/: account.rs  admin.rs  auth.rs  booking.rs  mod.rs  pages.rs  seo_routes.rs
src/middleware/: security_headers.rs
src/services/: email.rs  location.rs  mod.rs
static/css/: site.css
static/js/: site.js
templates/layouts/: base.html
templates/pages/: account.html  admin_customer.html  admin_dashboard.html  basic.html  booking.html  booking_success.html  faq.html  forgot_password.html  home.html  login.html  register.html  reset_password.html  services.html  verify.html
tests/: config_defaults.rs  public_pages.rs  seo_endpoints.rs
tests/common/: mod.rs
