[package]
name = "faszienbehandlung_jetzt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
askama = "0.12"
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
http = "1.1"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "derive", "macros", "migrate", "runtime-tokio-rustls", "sqlite"] }
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.44", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
